--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server/app.js",
     "dev": "webpack --mode development && node server/app.js",
     "build": "webpack --mode production",
+    "build-n-start": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,8 +23,11 @@
     "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "html-webpack-plugin": "^5.5.0",
+    "jsforce": "^1.11.0",
     "path": "^0.12.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
