--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typescript": "^4.7.2",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "workbox-webpack-plugin": "^6.5.3"
+    "workbox-webpack-plugin": "^6.5.3",
+    "ts-loader": "^9.3.0"
   },
   "devDependencies": {
     "ts-loader": "^9.3.0",
