--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.2.5",
@@ -29,14 +33,16 @@
     "html-webpack-plugin": "^5.5.0",
     "jsforce": "^1.11.0",
     "path": "^0.12.7",
+    "pino": "^8.6.1",
+    "pino-pretty": "^9.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.0",
     "typescript": "^4.7.2",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "workbox-webpack-plugin": "^6.5.3",
-    "ts-loader": "^9.3.0"
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "devDependencies": {
     "webpack-dev-server": "^4.9.0"
