--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.17.3",
     "html-webpack-plugin": "^5.5.0",
     "jsforce": "^1.11.0",
+    "kafkajs": "^2.2.4",
     "path": "^0.12.7",
     "pg": "^8.10.0",
     "pino": "^8.6.1",
