--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/kafkajs": "^1.9.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
@@ -55,5 +56,8 @@
   },
   "devDependencies": {
     "webpack-dev-server": "^4.9.0"
-  }
+  },
+  "browser": {
+    "crypto": false
+  }  
 }
