--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.2",
@@ -56,5 +57,5 @@
   },
   "devDependencies": {
     "webpack-dev-server": "^4.9.0"
-  }      
+  }
 }
